working on hover on card

--- a/avatarCardUI/index.html
+++ b/avatarCardUI/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>Avatar Card</title>
 </head>
-<div class="card"></div>
+<div class="card">
+    <div class="poster">
+        <img src="./assets/poster.jpg" alt="poster">
+    </div>
+    <div class="details">
+        <img src="./assets/avtarlogo.png" alt="logo" class="logo">
+    </div>
+</div>
 <body>
     
 </body>
